force-app/main/default/objects/Account/fields/Account_Classification__c.field-meta.xml
<CustomField>
    <fullName>Account_Classification__c</fullName>
    <label>Account Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Agence immobiliÃ¨re</fullName>
                <isActive>false</isActive>
                <label>Agence immobiliÃ¨re</label>
            </value>
            <value>
                <fullName>Agencia de Representación de Porcelanosa</fullName>
            </value>
            <value>
                <fullName>Architectural firm</fullName>
                <label>Architectural Firm</label>
            </value>
            <value>
                <fullName>Architectural Firms</fullName>
                <isActive>false</isActive>
                <label>Architectural Firms</label>
            </value>
            <value>
                <fullName>Brand/Chain/Franchise</fullName>
                <label>Brand/Franchise</label>
            </value>
            <value>
                <fullName>Brands and Franchises</fullName>
                <isActive>false</isActive>
                <label>Brands and Franchises</label>
            </value>
            <value>
                <fullName>Building company</fullName>
                <isActive>false</isActive>
                <label>Building company</label>
            </value>
            <value>
                <fullName>Construction company</fullName>
                <label>Construction Company</label>
            </value>
            <value>
                <fullName>Custom home builder</fullName>
                <label>Custom Home Builder</label>
            </value>
            <value>
                <fullName>Custom home designer</fullName>
                <isActive>false</isActive>
                <label>Custom home designer</label>
            </value>
            <value>
                <fullName>Design-Build company</fullName>
                <label>Design-Build Company</label>
            </value>
            <value>
                <fullName>Developer</fullName>
                <label>Developer/Investor</label>
            </value>
            <value>
                <fullName>Distributor</fullName>
                <isActive>false</isActive>
                <label>Distributor</label>
            </value>
            <value>
                <fullName>Distributor / 3rd party retailer/dealer</fullName>
                <label>Distributor / Dealer</label>
            </value>
            <value>
                <fullName>Engineering consultant</fullName>
                <label>Engineering Consultant</label>
            </value>
            <value>
                <fullName>Fabricator</fullName>
                <label>Fabricator/Stonemason</label>
            </value>
            <value>
                <fullName>Fabricators</fullName>
                <isActive>false</isActive>
                <label>Fabricators</label>
            </value>
            <value>
                <fullName>Facade consultant</fullName>
                <label>Facade Consultant</label>
            </value>
            <value>
                <fullName>Facade Contractor</fullName>
                <isActive>false</isActive>
                <label>Facade Contractor</label>
            </value>
            <value>
                <fullName>Facade Installer</fullName>
            </value>
            <value>
                <fullName>Fit-out</fullName>
                <isActive>false</isActive>
                <label>Fit-out</label>
            </value>
            <value>
                <fullName>Fit-out company (commercial contract)</fullName>
                <label>Fit-Out Company (Commercial Contract)</label>
            </value>
            <value>
                <fullName>Franchisee</fullName>
            </value>
            <value>
                <fullName>Furniture Company</fullName>
            </value>
            <value>
                <fullName>Interior Design</fullName>
                <isActive>false</isActive>
                <label>Interior Design</label>
            </value>
            <value>
                <fullName>Interior design firm</fullName>
                <label>Interior Design Firm</label>
            </value>
            <value>
                <fullName>Kitchen &amp; Bath store</fullName>
                <label>Kitchen &amp; Bath Store (XTONE only)</label>
            </value>
            <value>
                <fullName>Kitchen &amp; Bath Store XTONE</fullName>
                <isActive>false</isActive>
                <label>Kitchen &amp; Bath Store XTONE</label>
            </value>
            <value>
                <fullName>Kitchen instalation company</fullName>
                <label>Kitchen Installation Company</label>
            </value>
            <value>
                <fullName>National House Builders</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>