force-app/main/default/objects/Account/fields/Account_Name_2__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_2__c</fullName>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name</label>
    <type>Text</type>
</CustomField>