force-app/main/default/objects/Account/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <description>Cuentas Activas o Inactivas</description>
    <label>Account Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Inactive: Cessation of Activity</fullName>
            </value>
            <value>
                <fullName>Inactive: Duplicated</fullName>
            </value>
            <value>
                <fullName>Inactive: Wrong Classification, not a business client</fullName>
            </value>
            <value>
                <fullName>Inactive: Private customer purchasing through a trade client</fullName>
            </value>
            <value>
                <fullName>Waiting for Approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>