force-app/main/default/objects/Account/fields/Account_Subclassification__c.field-meta.xml
<CustomField>
    <fullName>Account_Subclassification__c</fullName>
    <label>Account Subclassification</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Account_Classification__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>Big-Box</fullName>
            </value>
            <value>
                <fullName>Consumer Goods</fullName>
            </value>
            <value>
                <fullName>Cruises</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Food &amp; Beverage</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Hospitality/ Hotel</fullName>
            </value>
            <value>
                <fullName>Landscape Architect</fullName>
            </value>
            <value>
                <fullName>Multifamily</fullName>
            </value>
            <value>
                <fullName>Multi-Unit</fullName>
            </value>
            <value>
                <fullName>Offices</fullName>
            </value>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Retail Chain</fullName>
            </value>
            <value>
                <fullName>Senior Living</fullName>
            </value>
            <value>
                <fullName>Transportation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>