force-app/main/default/objects/Account/fields/AddressesSynced__c.field-meta.xml
<CustomField>
    <fullName>AddressesSynced__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if the contact point addresses have been synced with SAP. False otherwise..</description>
    <label>Addresses Synced</label>
    <type>Checkbox</type>
</CustomField>