force-app/main/default/objects/Account/fields/Amount_Of_Worktops_Per_Year__c.field-meta.xml
<CustomField>
    <fullName>Amount_Of_Worktops_Per_Year__c</fullName>
    <label>Amount Of Worktops Per Year</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>