force-app/main/default/objects/Account/fields/Area_Region__c.field-meta.xml
<CustomField>
    <fullName>Area_Region__c</fullName>
    <label>Area/Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ASIA</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
                <default>true</default>
                <label>EMEA</label>
            </value>
            <value>
                <fullName>USA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>