force-app/main/default/objects/Account/fields/Automatic_SAP_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Automatic_SAP_Error_Message__c</fullName>
    <description>Holds tips about what was wrong on the Automatic Send to Finance Dpt process</description>
    <label>Automatic SAP Error Message</label>
    <type>TextArea</type>
</CustomField>