force-app/main/default/objects/Account/fields/Brands_They_Work_With__c.field-meta.xml
<CustomField>
    <fullName>Brands_They_Work_With__c</fullName>
    <label>Brands They Work With</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Altissima</fullName>
            </value>
            <value>
                <fullName>Antolini</fullName>
            </value>
            <value>
                <fullName>Avonite</fullName>
            </value>
            <value>
                <fullName>Caesarstone</fullName>
            </value>
            <value>
                <fullName>Cambria</fullName>
            </value>
            <value>
                <fullName>Compac</fullName>
            </value>
            <value>
                <fullName>Corian</fullName>
            </value>
            <value>
                <fullName>Dekton</fullName>
            </value>
            <value>
                <fullName>Formica</fullName>
            </value>
            <value>
                <fullName>HanStone</fullName>
            </value>
            <value>
                <fullName>Henraux</fullName>
            </value>
            <value>
                <fullName>Hi-macs</fullName>
            </value>
            <value>
                <fullName>Itopker</fullName>
            </value>
            <value>
                <fullName>Krion</fullName>
            </value>
            <value>
                <fullName>Laminam</fullName>
            </value>
            <value>
                <fullName>Lapitec</fullName>
            </value>
            <value>
                <fullName>Levantina</fullName>
            </value>
            <value>
                <fullName>Neolith</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Quarella</fullName>
            </value>
            <value>
                <fullName>Radianz</fullName>
            </value>
            <value>
                <fullName>Santamargherita</fullName>
            </value>
            <value>
                <fullName>Sapienstone</fullName>
            </value>
            <value>
                <fullName>Sensa</fullName>
            </value>
            <value>
                <fullName>Silestone</fullName>
            </value>
            <value>
                <fullName>Staron</fullName>
            </value>
            <value>
                <fullName>Techlam</fullName>
            </value>
            <value>
                <fullName>Viatera</fullName>
            </value>
            <value>
                <fullName>Wilsonart</fullName>
            </value>
            <value>
                <fullName>Xtone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>