force-app/main/default/objects/Account/fields/Business_Email__c.field-meta.xml
<CustomField>
    <fullName>Business_Email__c</fullName>
    <description>Email del Business</description>
    <inlineHelpText>Business Email</inlineHelpText>
    <label>Business Email</label>
    <type>Email</type>
</CustomField>