force-app/main/default/objects/Account/fields/Company_Form__c.field-meta.xml
<CustomField>
    <fullName>Company_Form__c</fullName>
    <formula>TEXT(  Company_Num__c  )   &amp;    &apos;|&apos; &amp;  Lookup_Company__r.Company_concat__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company_Form</label>
    <type>Text</type>
</CustomField>