force-app/main/default/objects/Account/fields/Company_List__c.field-meta.xml
<CustomField>
    <fullName>Company_List__c</fullName>
    <label>Company List</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>company_list</valueSetName>
    </valueSet>
</CustomField>