force-app/main/default/objects/Account/fields/Company_Num__c.field-meta.xml
<CustomField>
    <fullName>Company_Num__c</fullName>
    <label>Company Num</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>