force-app/main/default/objects/Account/fields/ConversionDate__c.field-meta.xml
<CustomField>
    <fullName>ConversionDate__c</fullName>
    <label>ConversionDate</label>
    <type>Date</type>
</CustomField>