force-app/main/default/objects/Account/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Country code ISO-3166-1</description>
    <label>Country_old</label>
    <length>2</length>
    <type>Text</type>
</CustomField>