force-app/main/default/objects/Account/fields/Country_formula__c.field-meta.xml
<CustomField>
    <fullName>Country_formula__c</fullName>
    <formula>IF( IsPersonAccount , PersonMailingCountry, BillingCountry)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country</label>
    <type>Text</type>
</CustomField>