force-app/main/default/objects/Account/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>INTERNATIONAL</fullName>
                <label>International</label>
            </value>
            <value>
                <fullName>NATIONAL</fullName>
                <label>National</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>