force-app/main/default/objects/Account/fields/Deleted__c.field-meta.xml
<CustomField>
    <fullName>Deleted__c</fullName>
    <formula>IF( Is_Deleted__c = FALSE, IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;verde&quot;,20,20), IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;rojo&quot;,20,20))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deleted</label>
    <type>Text</type>
</CustomField>