force-app/main/default/objects/Account/fields/Dirty__c.field-meta.xml
<CustomField>
    <fullName>Dirty__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If check, the account hasn&apos;t been synced with SAP and has been updated any of the Sync SAP fields</description>
    <label>Dirty</label>
    <type>Checkbox</type>
</CustomField>