force-app/main/default/objects/Account/fields/DVSAcceptedBy__c.field-meta.xml
<CustomField>
    <fullName>DVSAcceptedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Quien ha aceptado o descartado los cambios del DVS</description>
    <label>DVS Accepted By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>