force-app/main/default/objects/Account/fields/DVSAcceptedDate__c.field-meta.xml
<CustomField>
    <fullName>DVSAcceptedDate__c</fullName>
    <description>Fecha de cuando se han aceptado o descartado los cambios</description>
    <label>DVS Accepted Date</label>
    <type>DateTime</type>
</CustomField>