force-app/main/default/objects/Account/fields/DVSAction__c.field-meta.xml
<CustomField>
    <fullName>DVSAction__c</fullName>
    <description>Discarded: Se quedan con los datos de Salesforce
Accepted: Se quedan con los datos del DVS
Unknown: No ha habido resultados al buscar por el dvs.
Confirmed: Contabilidad ha aceptado la validación.</description>
    <label>DVS Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACCEPTED</fullName>
                <label>Accepted</label>
            </value>
            <value>
                <fullName>DISCARDED</fullName>
                <label>Discarded</label>
            </value>
            <value>
                <fullName>UNKNOWN</fullName>
                <label>Unknown</label>
            </value>
            <value>
                <fullName>CONFIRMED</fullName>
                <label>Confirmed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>