force-app/main/default/objects/Account/fields/DvsError__c.field-meta.xml
<CustomField>
    <fullName>DvsError__c</fullName>
    <label>DVS Error (Deprecated)</label>
    <type>TextArea</type>
</CustomField>