force-app/main/default/objects/Account/fields/DvsHasError__c.field-meta.xml
<CustomField>
    <fullName>DvsHasError__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tell whether a DVS Error has been reported</inlineHelpText>
    <label>Has Dvs Error</label>
    <type>Checkbox</type>
</CustomField>