force-app/main/default/objects/Account/fields/DvsLongError__c.field-meta.xml
<CustomField>
    <fullName>DvsLongError__c</fullName>
    <label>DVS Error</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>