force-app/main/default/objects/Account/fields/DvsReport__c.field-meta.xml
<CustomField>
    <fullName>DvsReport__c</fullName>
    <formula>IF(AND(!ISBLANK(DvsError__c), SynchronizedWithDvs__c = false), &apos;DVS Error&apos;,  IF(AND(!ISBLANK(DvsError__c), SynchronizedWithDvs__c = true), &apos;Error accepted&apos;, IF( SynchronizedWithDvs__c  =  true, &apos;Synchronized with DVS&apos;, &apos;Discrepancy found&apos;) ) )</formula>
    <label>Dvs Report</label>
    <type>Text</type>
</CustomField>