force-app/main/default/objects/Account/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <description>External ID to match the Lead Account of origin</description>
    <label>External ID</label>
    <length>16</length>
    <type>Text</type>
</CustomField>