force-app/main/default/objects/Account/fields/F_Domain__c.field-meta.xml
<CustomField>
    <fullName>F_Domain__c</fullName>
    <formula>IF(
  NOT(IsPersonAccount),
  RIGHT(Business_Email__c, LEN(Business_Email__c) - FIND(&quot;@&quot;, Business_Email__c)),
  RIGHT(PersonEmail, LEN(PersonEmail) - FIND(&quot;@&quot;, PersonEmail))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Domain</label>
    <type>Text</type>
</CustomField>