force-app/main/default/objects/Account/fields/Fabricator_2__c.field-meta.xml
<CustomField>
    <fullName>Fabricator_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fabricator 2</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>This account is not a Fabricator.</errorMessage>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Fabricator</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Fabricator 2)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>