force-app/main/default/objects/Account/fields/Fabricator_3__c.field-meta.xml
<CustomField>
    <fullName>Fabricator_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fabricator 3</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>This account is not a Fabricator.</errorMessage>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Fabricator</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Fabricator 3)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>