force-app/main/default/objects/Account/fields/Fabricators_they_work_with__c.field-meta.xml
<CustomField>
    <fullName>Fabricators_they_work_with__c</fullName>
    <label>Fabricators they work with</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Todavía ninguno</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>