force-app/main/default/objects/Account/fields/Has_Parent__c.field-meta.xml
<CustomField>
    <fullName>Has_Parent__c</fullName>
    <description>True if the account has a parent account</description>
    <formula>not isblank(Parent.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used in duplicated rules where Parent is not available</inlineHelpText>
    <label>Has Parent</label>
    <type>Checkbox</type>
</CustomField>