force-app/main/default/objects/Account/fields/Is_Deleted__c.field-meta.xml
<CustomField>
    <fullName>Is_Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Información sobre si al cuenta se encuentra borrada</description>
    <inlineHelpText>Information on whether the account is deleted</inlineHelpText>
    <label>Is Deleted</label>
    <type>Checkbox</type>
</CustomField>