force-app/main/default/objects/Account/fields/Is_Locked__c.field-meta.xml
<CustomField>
    <fullName>Is_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Información sobre si al cuenta se encuentra bloqueada</description>
    <inlineHelpText>Information on whether the account is locked</inlineHelpText>
    <label>Is Locked</label>
    <type>Checkbox</type>
</CustomField>