force-app/main/default/objects/Account/fields/Last_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_Date__c</fullName>
    <description>Date of the newest last created/modification date of any related object to an Account</description>
    <label>Last Activity Date (LAD)</label>
    <type>DateTime</type>
</CustomField>