force-app/main/default/objects/Account/fields/LastContactDateTime__c.field-meta.xml
<CustomField>
    <fullName>LastContactDateTime__c</fullName>
    <description>We set here the time of the last Contact related created</description>
    <label>Last Contact DateTime</label>
    <type>DateTime</type>
</CustomField>