force-app/main/default/objects/Account/fields/LastEmailDateTime__c.field-meta.xml
<CustomField>
    <fullName>LastEmailDateTime__c</fullName>
    <description>We set here the time of the last Email related created</description>
    <label>Last Email DateTime</label>
    <type>DateTime</type>
</CustomField>