force-app/main/default/objects/Account/fields/LastOpportunityDateTime__c.field-meta.xml
<CustomField>
    <fullName>LastOpportunityDateTime__c</fullName>
    <description>We set here the time of the last Opportunity related created</description>
    <label>Last Opportunity DateTime</label>
    <type>DateTime</type>
</CustomField>