force-app/main/default/objects/Account/fields/Lead_Origin__c.field-meta.xml
<CustomField>
    <fullName>Lead_Origin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead Origin</label>
    <type>Checkbox</type>
</CustomField>