force-app/main/default/objects/Account/fields/leadsRelatedUrl__c.field-meta.xml
<CustomField>
    <fullName>leadsRelatedUrl__c</fullName>
    <label>leadsRelatedUrl</label>
    <length>100</length>
    <type>Text</type>
</CustomField>