force-app/main/default/objects/Account/fields/Load_Id__c.field-meta.xml
<CustomField>
    <fullName>Load_Id__c</fullName>
    <externalId>true</externalId>
    <label>Load Id</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>