force-app/main/default/objects/Account/fields/Lookup_Company__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Sociedad de referencia. Nivel superior en la jerarquía de localización. Es el nombre de la sociedad de referencia o la compañia. Corresponde al campo CompanyName del objeto personalizado COMPANY</description>
    <label>Lookup Company</label>
    <referenceTo>Company__c</referenceTo>
    <relationshipLabel>Company</relationshipLabel>
    <relationshipName>COMPANY</relationshipName>
    <type>Lookup</type>
</CustomField>