force-app/main/default/objects/Account/fields/Main_Activity__c.field-meta.xml
<CustomField>
    <fullName>Main_Activity__c</fullName>
    <label>Main Activity</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Bathroom</fullName>
            </value>
            <value>
                <fullName>Ceramic</fullName>
            </value>
            <value>
                <fullName>Kitchen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>